Opened 10 years ago

Closed 10 years ago

#11612 closed bug (fixed)

[DataTranslations] doesn't fit translators views

Reported by: diver Owned by: pulkomandy
Priority: normal Milestone: R1
Component: Preferences/DataTranslations Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

This is hrev48487.

After hrev48464 DataTranslations is unable to resize its window to fit translators views.

Noticable with PSDTranslator and with almost any translator with Russian locale

Change History (2)

comment:1 by dsjonny, 10 years ago

I got the same problem with some translators using HU locale.

comment:2 by pulkomandy, 10 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev48490.

Note: See TracTickets for help on using tickets.