DataTranslations: remove SetExplicitMinSize

It prevents the window to get big enough for some of the translators.

Fixes #11612.